5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1679_1101.log
== TEST (2019-04-25 17:39:51) 
-- CODE:
var1=float(input("consumo:"))
var2=float(input("instalacao:"))

if(var1<0 and var2!= "R", "I", "C"):
	print("Dados invalidos")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
ValueError: could not convert string to float: 'I'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:40:11) 
-- CODE:
var1=float(input("consumo:"))
var2=float(input("instalacao:"))

if(var1<0 and var2!= "R", "I", "C"):
	print("Dados invalidos")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=float(input())
ValueError: could not convert string to float: 'I'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:43:08) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if(var1<0 and var2!= "R", "I", "C"):
	print("Dados invalidos")
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:48:55) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if(var1<0 and var2!= "R", "I", "C"):
	print("Dados invalidos")
elif((var1 <=500) and (var2==R)):
	print(var1*0.44)
elif((var1>500) and (var2==R)):
	print(var1*0.65)
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:49:34) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C"):
	print("Dados invalidos")
elif((var1 <=500) and (var2==R)):
	print(var1*0.44)
elif((var1>500) and (var2==R)):
	print(var1*0.65)
-- ERROR:
File "XXXX", line 4
    if((var1<0) and (var2!= "R", "I", "C"):
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:49:39) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2==R)):
	print(var1*0.44)
elif((var1>500) and (var2==R)):
	print(var1*0.65)
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:49:57) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(var1*0.44)
elif((var1>500) and (var2==R)):
	print(var1*0.65)
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:50:06) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(var1*0.44)
elif((var1>500) and (var2==R)):
	print(var1*0.65)
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:50:26) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(var1*0.44)
elif((var1>500) and (var2==R)):
	print(var1*0.65)
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:50:41) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(var1*0.44)
elif((var1>500) and (var2=="R")):
	print(var1*0.65)
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:51:37) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(var1*0.44)
elif((var1>500) and (var2=="R")):
	print(var1*0.65)
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(var1*0.55)
elif((var1>1000)) and ((var2=="C")):
	print(var1*0.60)
	
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:52:10) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(var1*0.44)
elif((var1>500) and (var2=="R")):
	print(var1*0.65)
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(var1*0.55)
elif((var1>1000)) and ((var2=="C")):
	print(var1*0.60)
	
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:54:47) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(var1*0.44)
elif((var1>500) and (var2=="R")):
	print(var1*0.65)
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(var1*0.55)
elif((var1>1000)) and ((var2=="C")):
	print(var1*0.60)
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(var1*0.55)
elif((var1>5000)) and (var2=="I"):
	print(var1*0.60)
	
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 21:56:12) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(var1*0.44)
elif((var1>500) and (var2=="R")):
	print(var1*0.65)
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(var1*0.55)
elif((var1>1000)) and ((var2=="C")):
	print(var1*0.60)
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(var1*0.55)
elif((var1>5000)) and (var2=="I"):
	print(var1*0.60)
	
-- EXECUTION TIME:
0.241447
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:57:59) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print(round(var1*0.60, 2))
	
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 21:58:12) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print(round(var1*0.60, 2))
	
-- EXECUTION TIME:
0.141518
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:59:07) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
print(var1)
print(var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print(round(var1*0.60, 2))

	
-- OUTPUT:
-56.0
I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 21:59:17) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
print(var1)
print(var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print(round(var1*0.60, 2))

	
-- EXECUTION TIME:
0.189685
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
-56.0
I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
955.5
R
621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:00:10) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="790.5 kWh e tipo C"
print(x)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print(round(var1*0.60, 2))

	
-- OUTPUT:
790.5 kWh e tipo C
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 22:00:25) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="790.5 kWh e tipo C"
print(x)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print(round(var1*0.60, 2))

	
-- EXECUTION TIME:
0.108306
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
790.5 kWh e tipo C
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
790.5 kWh e tipo C
621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:00:39) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print(round(var1*0.60, 2))

	
-- OUTPUT:
Entradas: 790.5 kWh e tipo C
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 22:00:48) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print(round(var1*0.60, 2))

	
-- EXECUTION TIME:
0.192199
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: 790.5 kWh e tipo C
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 790.5 kWh e tipo C
621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:08:07) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")


if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print(round(var1*0.60, 2))

	
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 22:09:36) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")


if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print(round(var1*0.60, 2))

	
-- EXECUTION TIME:
0.271673
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:17:17) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)
z="Valor total: "
if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(z+(round(var1*0.44, 2)))
elif((var1>500) and (var2=="R")):
	print(z+(round(var1*0.65, 2)))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(z+(round(var1*0.55, 2)))
elif((var1>1000)) and ((var2=="C")):
	print(z+(round(var1*0.60, 2)))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(z+(round(var1*0.55, 2)))
elif((var1>5000)) and (var2=="I"):
	print(z+(round(var1*0.60, 2)))

	
-- OUTPUT:
Entradas: 790.5 kWh e tipo C
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:18:38) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)
if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2))

	
-- ERROR:
File "XXXX", line 21
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:18:48) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)
if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2))
-- ERROR:
File "XXXX", line 19
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:19:01) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)
if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2))

-- ERROR:
File "XXXX", line 19
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:19:39) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)
if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2))

-- ERROR:
File "XXXX", line 19
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:20:09) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)
if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2))

-- ERROR:
File "XXXX", line 19
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:20:17) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)
if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2))

-- ERROR:
File "XXXX", line 19
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:20:43) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)
if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2))
-- ERROR:
File "XXXX", line 19
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:21:02) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2))
-- ERROR:
File "XXXX", line 18
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:21:31) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2))
-- ERROR:
File "XXXX", line 18
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:21:53) 
-- CODE:
var1=float(input("consumo:"))
var2=input("instalacao:")
x="Entradas: 790.5 kWh e tipo C"
print(x)
if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- OUTPUT:
Entradas: 790.5 kWh e tipo C
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:23:38) 
-- CODE:
var1=float(input("consumo:")) + "kWh"
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=float(input()) + "kWh"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:24:09) 
-- CODE:
var1=float(input("consumo:")) + input("kWh")
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=float(input()) + input()
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:24:41) 
-- CODE:
var1=float(input("consumo:" + "kWh")) 
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- OUTPUT:
consumo:kWhDados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:41:29) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:41:47) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- EXECUTION TIME:
0.144692
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:48:32) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:16:34) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entrada:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- OUTPUT:
Entrada: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:16:50) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entrada:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- EXECUTION TIME:
0.171657
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kWh e tipo R
621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:16:53) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entrada:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- OUTPUT:
Entrada: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:17:09) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entradas:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:17:22) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entradas:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- EXECUTION TIME:
0.153018
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:17:38) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entradas:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:20:16) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entradas:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print("Valor total: R$",round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print("Valor total: R$",round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print("Valor total: R$",round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print("Valor total: R$",round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print("Valor total: R$",round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((("Valor total: R$",round(var1*0.60, 2)))

	
-- ERROR:
File "XXXX", line 21
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:20:37) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entradas:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print((round(var1*0.60, 2)))

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:21:04) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entradas:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print("Valor total: R$",(round(var1*0.60, 2)))

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:21:52) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entradas:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print("Valor total: R$",(round(var1*0.44, 2))
elif((var1>500) and (var2=="R")):
	print("Valor total: R$",(round(var1*0.65, 2))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print("Valor total: R$",(round(var1*0.55, 2))
elif((var1>1000)) and ((var2=="C")):
	print("Valor total: R$",(round(var1*0.60, 2))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print("Valor total: R$",(round(var1*0.55, 2))
elif((var1>5000)) and (var2=="I"):
	print("Valor total: R$",(round(var1*0.60, 2)))

	
-- ERROR:
File "XXXX", line 9
    elif((var1>500) and (var2=="R")):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:22:12) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entradas:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print("Valor total: R$",(round(var1*0.44, 2)))
elif((var1>500) and (var2=="R")):
	print("Valor total: R$",(round(var1*0.65, 2)))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print("Valor total: R$",(round(var1*0.55, 2)))
elif((var1>1000)) and ((var2=="C")):
	print("Valor total: R$",(round(var1*0.60, 2)))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print("Valor total: R$",(round(var1*0.55, 2)))
elif((var1>5000)) and (var2=="I"):
	print("Valor total: R$",(round(var1*0.60, 2)))

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:22:28) 
-- CODE:
var1=float(input("consumo:")) 
var2=input("instalacao:")
print("Entradas:",var1,"kWh","e tipo",var2)

if((var1<0) and (var2!= "R", "I", "C")):
	print("Dados invalidos")
elif((var1 <=500) and (var2=="R")):
	print("Valor total: R$",(round(var1*0.44, 2)))
elif((var1>500) and (var2=="R")):
	print("Valor total: R$",(round(var1*0.65, 2)))
elif((var1>0) and (var1<=1000)) and ((var2=="C")):
	print("Valor total: R$",(round(var1*0.55, 2)))
elif((var1>1000)) and ((var2=="C")):
	print("Valor total: R$",(round(var1*0.60, 2)))
elif((var1>0)) and ((var1<5000)) and(var2=="I"):
	print("Valor total: R$",(round(var1*0.55, 2)))
elif((var1>5000)) and (var2=="I"):
	print("Valor total: R$",(round(var1*0.60, 2)))

	
-- EXECUTION TIME:
0.173376
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
